update  mix config

--- a/loyep/planet/resources/sass/app.scss
+++ b/loyep/planet/resources/sass/app.scss
@@ -1,7 +1,7 @@
-
 //<!-- Styles -->
 //<link href="../assets/css/core.min.css" rel="stylesheet">
 //<link href="../assets/css/app.min.css" rel="stylesheet">
 //<link href="../assets/css/style.min.css" rel="stylesheet">
-
 @import "fonts";
+@import "scss/app";
+@import "style";
