--- a/loyep/planet/resources/sass/fonts.scss
+++ b/loyep/planet/resources/sass/fonts.scss
@@ -1,4 +1,4 @@
-@import "~bootstrap-sass/assets/stylesheets/_bootstrap.scss";
+@import "~bootstrap/scss/bootstrap";
 @import "~font-awesome/scss/font-awesome";
 @import "~themify-icons-sass/themify-icons/_themify-icons.scss";
 @import "~animsition/dist/css/animsition.css";
