--- a/loyep/planet/resources/sass/style.scss
+++ b/loyep/planet/resources/sass/style.scss
@@ -16,9 +16,9 @@
 //---------------------------------------------------------------------------
 // Header images
 //
-.bg-ui-general {
-  background-image: url(../img/header/general.png);
-}
+//.bg-ui-general {
+//  background-image: url(./img/header/general.png);
+//}
 
 
 //---------------------------------------------------------------------------
