--- a/loyep/planet/resources/sass/scss/layout/_sidebar-skin.scss
+++ b/loyep/planet/resources/sass/scss/layout/_sidebar-skin.scss
@@ -1,4 +1,3 @@
-
 //-----------------------------------------------------------------
 // Default skin
 //
@@ -29,9 +28,8 @@
     }
   }
 
-
   .menu > .menu-item:hover > .menu-link {
-    background-color: rgba(0,0,0,0.1);
+    background-color: rgba(0, 0, 0, 0.1);
   }
 
 }
@@ -58,8 +56,6 @@
     background-color: $color-primary;
   }
 }
-
-
 
 //-----------------------------------------------------------------
 // Sidebar dark skin
@@ -96,11 +92,11 @@
 
   &.sidebar-icons-boxed {
     .menu .menu-link .icon {
-      background-color: rgba(0,0,0,0.035);
+      background-color: rgba(0, 0, 0, 0.035);
     }
 
     .menu .active > .menu-link .icon {
-      background-color: rgba(255,255,255,0.15);
+      background-color: rgba(255, 255, 255, 0.15);
     }
 
     .menu-submenu .active > .menu-link .icon {
@@ -173,7 +169,6 @@
 
 }
 
-
 //-----------------------------------------------------------------
 // Bordery style
 //
@@ -190,7 +185,7 @@
 
 }
 
-.sidebar-icons-boxed .menu.menu-bordery .active>.menu-link .icon {
+.sidebar-icons-boxed .menu.menu-bordery .active > .menu-link .icon {
   color: #fff;
 }
 
@@ -198,10 +193,6 @@
   background-color: $color-bg-lighter;
   color: $color-text;
 }
-
-
-
-
 
 //-----------------------------------------------------------------
 // Sidebar color
@@ -245,7 +236,7 @@
     }
   }
 
-  &.sidebar-icons-boxed .menu.menu-bordery .active>.menu-link .icon {
+  &.sidebar-icons-boxed .menu.menu-bordery .active > .menu-link .icon {
     background-color: $color-primary !important;
   }
 
@@ -259,9 +250,6 @@
     }
   }
 }
-
-
-
 
 // Other colors
 //
@@ -305,7 +293,7 @@
       }
     }
 
-    &.sidebar-icons-boxed .menu.menu-bordery .active>.menu-link .icon {
+    &.sidebar-icons-boxed .menu.menu-bordery .active > .menu-link .icon {
       background-color: $color !important;
     }
 
